--- a/src/app/components/main-page/get-started/get-started.component.html
+++ b/src/app/components/main-page/get-started/get-started.component.html
@@ -1,1 +1,21 @@
-<p>get-started works!</p>
+<div class="get-started ps-5 pt-5">
+    <div class="ms-5 mt-5">
+        <div class=" w-60 ps-3">
+            <div>
+                <h1 class="big-text ">GenAI apps, </h1>
+                <h1 class="big-text mb-3">groudned in your data</h1>
+                <h4 class="smaller-text">Power your applications with knowledgew graphs. Backed by the only graps dtabase </h4>
+                <div>
+                    <button>Get Started for Free</button>
+                    <button>Ecplore GenAI</button>
+                </div>
+            </div>
+            <div>
+                <h4>INNAVATION LEADERS RELY ON GRAPH</h4>
+                <div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
