--- a/src/app/components/main-page/get-started/get-started.component.html
+++ b/src/app/components/main-page/get-started/get-started.component.html
@@ -1,17 +1,17 @@
-<div class="get-started ps-5 pt-5">
-    <div class="ms-5 mt-5">
+<div class="get-started ps-5 d-flex flex-column justify-content-center">
+    <div class="ms-5">
         <div class=" w-60 ps-3">
             <div>
                 <h1 class="big-text ">GenAI apps, </h1>
-                <h1 class="big-text mb-3">groudned in your data</h1>
-                <h4 class="smaller-text">Power your applications with knowledgew graphs. Backed by the only graps dtabase </h4>
-                <div>
-                    <button>Get Started for Free</button>
-                    <button>Ecplore GenAI</button>
+                <h1 class="big-text mb-4">groudned in your data</h1>
+                <h4 class="smaller-text my-4">Power your applications with knowledgew graphs. Backed by the only graph database with vector search </h4>
+                <div class="my-4">
+                    <button mat-flat-button class="me-2">Get Started for Free</button>
+                    <button mat-stroked-button class="border-white text-white mx-2">Explore GenAI</button>
                 </div>
             </div>
             <div>
-                <h4>INNAVATION LEADERS RELY ON GRAPH</h4>
+                <h4 class="smaller-text my-4">INNAVATION LEADERS RELY ON GRAPH</h4>
                 <div>
                     
                 </div>
