--- a/src/app/components/main-page/get-started/get-started.component.scss
+++ b/src/app/components/main-page/get-started/get-started.component.scss
@@ -8,8 +8,9 @@
     font-size: 65px;
 }
 
-.get-started h4{
-    font-size: 23px;
+.smaller-text{
+    font-size: 21px;
+    font-weight: 350;
 }
 
 .get-started div.w-60{
