dark-mode implementation

--- a/src/app/components/main-page/get-started/get-started.component.scss
+++ b/src/app/components/main-page/get-started/get-started.component.scss
@@ -4,6 +4,11 @@
     color: white;
 }
 
+body.theme-dark .mat.get-started{
+    background-color: black;
+}
+
+
 .big-text{
     font-size: 65px;
 }
