--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<!-- <apkp-nav-bar></app-nav-bar> -->
+<!-- <app-nav-bar></app-nav-bar> -->
 <app-test-nav></app-test-nav>
 <router-outlet></router-outlet>
