--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -90,20 +90,20 @@ img{
     position: absolute;
 }
 
-.dark-mode-toggle{
-    width: 5rem;
-    height: 5rem;
-    border-radius: 50%;
-    position: absolute;
-    background-color: black;
-    color: white;
-    font-size: 12px;
-    bottom: 20px;
-    right: 20px;
-    box-shadow:  0px 0px 10px  0px;
-    cursor: pointer;
-    z-index: 9999;
-}
+// .dark-mode-toggle{
+//     width: 5rem;
+//     height: 5rem;
+//     border-radius: 50%;
+//     position: absolute;
+//     background-color: black;
+//     color: white;
+//     font-size: 12px;
+//     bottom: 20px;
+//     right: 20px;
+//     box-shadow:  0px 0px 10px  0px;
+//     cursor: pointer;
+//     z-index: 9999;
+// }
 
 h6{
     font-size: 20px;
