--- a/src/app/test-nav/test-nav.component.html
+++ b/src/app/test-nav/test-nav.component.html
@@ -1,8 +1,12 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
+  <mat-sidenav
+    #drawer
+    class="sidenav"
+    fixedInViewport
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    mode="side"
+    [opened]="false"
+  >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item href="#">Link 1</a>
@@ -12,106 +16,134 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      @if (isHandset$ | async) {
-        <button
-          type="button"
-          aria-label="Toggle sidenav"
-          mat-icon-button
-          (click)="drawer.toggle()">
-          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-        </button>
-      }
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+      >
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+
       <span>neo4j</span>
     </mat-toolbar>
     <!-- ----------- -->
 
-     <div class="mx-5 p-5">
-       <app-test-component ></app-test-component>
-       <div class="my-5">
-         <app-test-form></app-test-form>  
+    <div class="mx-5 p-5">
+      <app-test-component></app-test-component>
+      <div class="my-5">
+        <app-test-form></app-test-form>
+      </div>
+      <div class="my-5">
+        <section>
+          <div class="example-label">Basic</div>
+          <div class="example-button-row">
+            <button mat-button>Basic</button>
+            <button mat-button disabled>Disabled</button>
+            <a mat-button href="https://www.google.com/" target="_blank"
+              >Link</a
+            >
+          </div>
+        </section>
+        <mat-divider></mat-divider>
+        <section>
+          <div class="example-label">Raised</div>
+          <div class="example-button-row">
+            <button mat-raised-button>Basic</button>
+            <button mat-raised-button disabled>Disabled</button>
+            <a mat-raised-button href="https://www.google.com/" target="_blank"
+              >Link</a
+            >
+          </div>
+        </section>
+        <mat-divider></mat-divider>
+        <section>
+          <div class="example-label">Stroked</div>
+          <div class="example-button-row">
+            <button mat-stroked-button>Basic</button>
+            <button mat-stroked-button disabled>Disabled</button>
+            <a mat-stroked-button href="https://www.google.com/" target="_blank"
+              >Link</a
+            >
+          </div>
+        </section>
+        <mat-divider></mat-divider>
+        <section>
+          <div class="example-label">Flat</div>
+          <div class="example-button-row">
+            <button mat-flat-button>Basic</button>
+            <button mat-flat-button disabled>Disabled</button>
+            <a mat-flat-button href="https://www.google.com/" target="_blank"
+              >Link</a
+            >
+          </div>
+        </section>
+        <mat-divider></mat-divider>
+        <section>
+          <div class="example-label">Icon</div>
+          <div class="example-button-row">
+            <div class="example-flex-container">
+              <button
+                mat-icon-button
+                aria-label="Example icon button with a vertical three dot icon"
+              >
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <button
+                mat-icon-button
+                disabled
+                aria-label="Example icon button with a open in new tab icon"
+              >
+                <mat-icon>open_in_new</mat-icon>
+              </button>
+            </div>
+          </div>
+        </section>
+        <mat-divider></mat-divider>
+        <section>
+          <div class="example-label">FAB</div>
+          <div class="example-button-row">
+            <div class="example-flex-container">
+              <div class="example-button-container">
+                <button
+                  mat-fab
+                  aria-label="Example icon button with a delete icon"
+                >
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </div>
+              <div class="example-button-container">
+                <button
+                  mat-fab
+                  disabled
+                  aria-label="Example icon button with a heart icon"
+                >
+                  <mat-icon>favorite</mat-icon>
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <mat-divider></mat-divider>
 
-       </div>
-       <div class="my-5 ">
-       <section>
-        <div class="example-label">Basic</div>
-        <div class="example-button-row">
-          <button mat-button>Basic</button>
-          <button mat-button disabled>Disabled</button>
-          <a mat-button href="https://www.google.com/" target="_blank">Link</a>
-        </div>
-      </section>
-      <mat-divider></mat-divider>
-      <section>
-        <div class="example-label">Raised</div>
-        <div class="example-button-row">
-          <button mat-raised-button>Basic</button>
-          <button mat-raised-button disabled>Disabled</button>
-          <a mat-raised-button href="https://www.google.com/" target="_blank">Link</a>
-        </div>
-      </section>
-      <mat-divider></mat-divider>
-      <section>
-        <div class="example-label">Stroked</div>
-        <div class="example-button-row">
-          <button mat-stroked-button>Basic</button>
-          <button mat-stroked-button disabled>Disabled</button>
-          <a mat-stroked-button href="https://www.google.com/" target="_blank">Link</a>
-        </div>
-      </section>
-      <mat-divider></mat-divider>
-      <section>
-        <div class="example-label">Flat</div>
-        <div class="example-button-row">
-          <button mat-flat-button>Basic</button>
-          <button mat-flat-button disabled>Disabled</button>
-          <a mat-flat-button href="https://www.google.com/" target="_blank">Link</a>
-        </div>
-      </section>
-      <mat-divider></mat-divider>
-      <section>
-        <div class="example-label">Icon</div>
-        <div class="example-button-row">
-          <div class="example-flex-container">
-            <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
-              <mat-icon>more_vert</mat-icon>
-            </button>
-            <button mat-icon-button disabled aria-label="Example icon button with a open in new tab icon">
-              <mat-icon>open_in_new</mat-icon>
-            </button>
-          </div>
-        </div>
-      </section>
-      <mat-divider></mat-divider>
-      <section>
-        <div class="example-label">FAB</div>
-        <div class="example-button-row">
-          <div class="example-flex-container">
-            <div class="example-button-container">
-              <button mat-fab aria-label="Example icon button with a delete icon">
-                <mat-icon>delete</mat-icon>
-              </button>
-            </div>
-            <div class="example-button-container">
-              <button mat-fab disabled aria-label="Example icon button with a heart icon">
-                <mat-icon>favorite</mat-icon>
-              </button>
-            </div>
-          </div>
-        </div>
-      </section>
-      <mat-divider></mat-divider>
-      
         <section>
           <div class="example-label">Mini FAB</div>
           <div class="example-button-row">
             <div class="example-flex-container">
               <div class="example-button-container">
-                <button mat-mini-fab aria-label="Example icon button with a menu icon">
+                <button
+                  mat-mini-fab
+                  aria-label="Example icon button with a menu icon"
+                >
                   <mat-icon>menu</mat-icon>
                 </button>
               </div>
               <div class="example-button-container">
-                <button mat-mini-fab disabled aria-label="Example icon button with a home icon">
+                <button
+                  mat-mini-fab
+                  disabled
+                  aria-label="Example icon button with a home icon"
+                >
                   <mat-icon>home</mat-icon>
                 </button>
               </div>
@@ -142,14 +174,58 @@
               </div>
             </div>
           </div>
+          <button
+            class="btn btn-lg btn-outline-primary"
+            (click)="open(content)"
+          >
+            Launch demo modal
+          </button>
         </section>
       </div>
-      
-       <app-test-dashboard></app-test-dashboard>
-       <div class="dark-mode-toggle d-flex justify-content-center align-items-center" (click)="toggleTheme()">
-        Toggle  
+
+      <app-test-dashboard></app-test-dashboard>
     </div>
-    
-     </div>
+    <div
+      cdkDrag
+      class="dark-mode-toggle draggable-item d-flex justify-content-center align-items-center"
+      (click)="toggleTheme()"
+    >
+      Toggle
+    </div>
+    <div>
+      <ng-template #content let-modal>
+        <div class="modal-header">
+          <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
+          <button
+            type="button"
+            class="btn-close"
+            aria-label="Close"
+            (click)="modal.dismiss('Cross click')"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="dateOfBirth">pick a theme color</label>
+              <input
+            type="color"
+            id="colorPicker"
+            [(ngModel)]="navbarBackgroundColor"
+            (change)="onColorChange($event)"
+          />
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-outline-secondary"
+            (click)="modal.close('Save click')"
+          >
+            Save
+          </button>
+        </div>
+      </ng-template>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
