--- a/src/app/test-nav/test-nav.component.scss
+++ b/src/app/test-nav/test-nav.component.scss
@@ -1,13 +1,11 @@
 .sidenav-container {
   height: 100%;
-  z-index: 99999 !important;
   background-color: var(--body-background-color);
-  position: relative;
+  overflow: auto;
 }
 
 .sidenav {
   width: 200px;
-  z-index: 99999 !important;
   background-color: var(--navbar-background-color);
 }
 
@@ -26,15 +24,18 @@
   width: 5rem;
   height: 5rem;
   border-radius: 50%;
-  position: absolute;
-  background-color: var(--toggle-button-bg-color);
-  color: var(--toggle-button-color);
-  font-size: 12px;
-  bottom: 20px;
-  right: 20px;
-  box-shadow:  0px 0px 10px  0px;
-  cursor: pointer;
-  z-index: 9999;
+  position: sticky;
+  background-color: var(--navbar-background-color);
+  color: var(--toggle-button-bg-color);
+  font-size: 14px;
+  box-shadow:  0px 0px 18px  -8px var(--toggle-button-bg-color);
+  z-index: 999;
+}
+
+.draggable-item {
+  position: sticky;
+  bottom: 500px;
+  right: 500px !important;
 }
 
 section {
@@ -67,4 +68,8 @@ section {
   display: flex;
   justify-content: center;
   width: 120px;
+}
+
+.modal{
+  z-index: 99999999;
 }
