--- a/src/app/test-nav/test-nav.component.html
+++ b/src/app/test-nav/test-nav.component.html
@@ -193,7 +193,7 @@
       Toggle
     </div>
     <div>
-      <ng-template #content let-modal>
+      <ng-template class="my-modal" #content let-modal>
         <div class="modal-header">
           <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
           <button
@@ -210,7 +210,7 @@
               <input
             type="color"
             id="colorPicker"
-            [(ngModel)]="navbarBackgroundColor"
+            [(ngModel)]="navbarColor"
             (change)="onColorChange($event)"
           />
             </div>
