--- a/src/app/test-nav/test-nav.component.scss
+++ b/src/app/test-nav/test-nav.component.scss
@@ -1,12 +1,17 @@
 .sidenav-container {
   height: 100%;
   background-color: var(--body-background-color);
-  overflow: auto;
+  // overflow: auto;
+}
+
+.my-modal{
+  z-index: 9999 !important;
 }
 
 .sidenav {
   width: 200px;
   background-color: var(--navbar-background-color);
+  border-radius: 0%;
 }
 
 .sidenav .mat-toolbar {
@@ -16,7 +21,7 @@
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
-  z-index: 9999;
+  z-index: 999;
   background-color: var(--navbar-background-color);
 }
 
@@ -29,7 +34,7 @@
   color: var(--toggle-button-bg-color);
   font-size: 14px;
   box-shadow:  0px 0px 18px  -8px var(--toggle-button-bg-color);
-  z-index: 999;
+  z-index: 2;
 }
 
 .draggable-item {
@@ -68,8 +73,4 @@ section {
   display: flex;
   justify-content: center;
   width: 120px;
-}
-
-.modal{
-  z-index: 99999999;
 }
