--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar d-flex flex-column w-100 align-items-center justify-content-center">
+<!-- <div class="navbar d-flex flex-column w-100 align-items-center justify-content-center">
     <div class="width w-100 mx-5 px-5">
         <div class="top-nav d-flex align-items-center justify-content-end mt-2 mb-4" >
             <div class="top-nav-el mx-2">Aura login</div>
@@ -139,4 +139,4 @@
 
 <div class="dark-mode-toggle d-flex justify-content-center align-items-center" (click)="toggleTheme()">
     Toggle  
-</div>
+</div> -->
