--- a/src/app/test-nav/test-nav.component.html
+++ b/src/app/test-nav/test-nav.component.html
@@ -25,197 +25,23 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
 
-      <span>neo4j</span>
+      <span routerLink="/" style="cursor: pointer;">neo4j</span>
     </mat-toolbar>
     <!-- ----------- -->
+    <div class="m-5 px-5">
 
-    <div class="mx-5 p-5">
-      <app-test-component></app-test-component>
-      <div class="my-5">
-        <app-test-form></app-test-form>
-      </div>
-      <div class="my-5">
-        <section>
-          <div class="example-label">Basic</div>
-          <div class="example-button-row">
-            <button mat-button>Basic</button>
-            <button mat-button disabled>Disabled</button>
-            <a mat-button href="https://www.google.com/" target="_blank"
-              >Link</a
-            >
-          </div>
-        </section>
-        <mat-divider></mat-divider>
-        <section>
-          <div class="example-label">Raised</div>
-          <div class="example-button-row">
-            <button mat-raised-button>Basic</button>
-            <button mat-raised-button disabled>Disabled</button>
-            <a mat-raised-button href="https://www.google.com/" target="_blank"
-              >Link</a
-            >
-          </div>
-        </section>
-        <mat-divider></mat-divider>
-        <section>
-          <div class="example-label">Stroked</div>
-          <div class="example-button-row">
-            <button mat-stroked-button>Basic</button>
-            <button mat-stroked-button disabled>Disabled</button>
-            <a mat-stroked-button href="https://www.google.com/" target="_blank"
-              >Link</a
-            >
-          </div>
-        </section>
-        <mat-divider></mat-divider>
-        <section>
-          <div class="example-label">Flat</div>
-          <div class="example-button-row">
-            <button mat-flat-button>Basic</button>
-            <button mat-flat-button disabled>Disabled</button>
-            <a mat-flat-button href="https://www.google.com/" target="_blank"
-              >Link</a
-            >
-          </div>
-        </section>
-        <mat-divider></mat-divider>
-        <section>
-          <div class="example-label">Icon</div>
-          <div class="example-button-row">
-            <div class="example-flex-container">
-              <button
-                mat-icon-button
-                aria-label="Example icon button with a vertical three dot icon"
-              >
-                <mat-icon>more_vert</mat-icon>
-              </button>
-              <button
-                mat-icon-button
-                disabled
-                aria-label="Example icon button with a open in new tab icon"
-              >
-                <mat-icon>open_in_new</mat-icon>
-              </button>
-            </div>
-          </div>
-        </section>
-        <mat-divider></mat-divider>
-        <section>
-          <div class="example-label">FAB</div>
-          <div class="example-button-row">
-            <div class="example-flex-container">
-              <div class="example-button-container">
-                <button
-                  mat-fab
-                  aria-label="Example icon button with a delete icon"
-                >
-                  <mat-icon>delete</mat-icon>
-                </button>
-              </div>
-              <div class="example-button-container">
-                <button
-                  mat-fab
-                  disabled
-                  aria-label="Example icon button with a heart icon"
-                >
-                  <mat-icon>favorite</mat-icon>
-                </button>
-              </div>
-            </div>
-          </div>
-        </section>
-        <mat-divider></mat-divider>
-
-        <section>
-          <div class="example-label">Mini FAB</div>
-          <div class="example-button-row">
-            <div class="example-flex-container">
-              <div class="example-button-container">
-                <button
-                  mat-mini-fab
-                  aria-label="Example icon button with a menu icon"
-                >
-                  <mat-icon>menu</mat-icon>
-                </button>
-              </div>
-              <div class="example-button-container">
-                <button
-                  mat-mini-fab
-                  disabled
-                  aria-label="Example icon button with a home icon"
-                >
-                  <mat-icon>home</mat-icon>
-                </button>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section>
-          <div class="example-label">Extended Fab</div>
-          <div class="example-button-row">
-            <div class="example-flex-container">
-              <div class="example-button-container">
-                <button mat-fab extended>
-                  <mat-icon>favorite</mat-icon>
-                  Basic
-                </button>
-              </div>
-              <div class="example-button-container">
-                <button mat-fab extended disabled>
-                  <mat-icon>favorite</mat-icon>
-                  Disabled
-                </button>
-              </div>
-              <div class="example-button-container">
-                <a mat-fab extended routerLink=".">
-                  <mat-icon>favorite</mat-icon>
-                  Link
-                </a>
-              </div>
-            </div>
-          </div>
-          <button
-            class="btn btn-lg btn-outline-primary"
-            (click)="open(modalContent)"
-          >
-            Launch demo modal
-          </button>
-        </section>
-      </div>
-
-      <app-test-dashboard></app-test-dashboard>
-    </div>
-    <div
+      <!-- <router-outlet></router-outlet> -->
+      <div
       cdkDrag
       class="dark-mode-toggle draggable-item d-flex justify-content-center align-items-center"
       (click)="toggleTheme()"
-    >
+      >
       Toggle
     </div>
-    <div>
-      <ng-template #modalContent let-modal>
-        <div class="modal-header">
-          <h4 class="modal-title">Simple Modal</h4>
-          <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss()"></button>
-        </div>
-        <div class="modal-body">
-          <p>This is a simple modal body.</p>
-          <div>
-            <div class="mb-3">
-              <label for="dateOfBirth">pick a theme color</label>
-              <input
-            type="color"
-            id="colorPicker"
-            [(ngModel)]="navbarColor"
-            (change)="onColorChange($event)"
-          />
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" (click)="modal.close()">Close</button>
-        </div>
-      </ng-template>
-    </div>
+  </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
+
+
+
