lazy loading children fixed

--- a/src/app/test-nav/test-nav.component.html
+++ b/src/app/test-nav/test-nav.component.html
@@ -30,7 +30,7 @@
     <!-- ----------- -->
     <div class="m-5 px-5">
 
-      <!-- <router-outlet></router-outlet> -->
+      <router-outlet></router-outlet>
       <div
       cdkDrag
       class="dark-mode-toggle draggable-item d-flex justify-content-center align-items-center"
